fix time line spacing for prevention

--- a/assets/css/large-screen.css
+++ b/assets/css/large-screen.css
@@ -83,7 +83,7 @@
   }
 
   .timeline {
-    --timeline-axis-gap: 240px;
+    --timeline-axis-gap: 260px;
   }
 
   .gallery__slider .swiper-slide {
